dhall/tests/type-inference/failure/unit/OptionalDeprecatedSyntaxPresent.txt
Type error: error: annot mismatch: List Natural != Optional Natural
 --> <current file>:1:1
  |
1 | [ 1 ] : Optional Natural
  | ^^^^^ annot mismatch: List Natural != Optional Natural
  |
